feat: Integrate Ollama as a fourth LLM provider with configuration and UI updates

--- a/apps/open-swe/.env.example
+++ b/apps/open-swe/.env.example
@@ -13,6 +13,12 @@ ANTHROPIC_API_KEY=""
 OPENAI_API_KEY=""
 GOOGLE_API_KEY=""
 
+# Ollama configuration (optional)
+# API key is only needed for hosted Ollama instances
+OLLAMA_API_KEY=""
+# Base URL for Ollama instance (defaults to http://localhost:11434)
+OLLAMA_API_BASE="http://localhost:11434"
+
 
 # ------------------Infrastructure---------------------
 # Daytona API key for creating & accessing the cloud sandbox.
