--- a/apps/open-swe/package.json
+++ b/apps/open-swe/package.json
@@ -32,6 +32,7 @@
     "@langchain/langgraph": "^0.3.8",
     "@langchain/langgraph-sdk": "^0.0.95",
     "@langchain/mcp-adapters": "^0.5.2",
+    "@langchain/ollama": "^0.2.3",
     "@langchain/openai": "^0.5.10",
     "@mendable/firecrawl-js": "^1.29.1",
     "@octokit/app": "^16.0.1",
